--- a/Client/flutter_client/pubspec.yaml
+++ b/Client/flutter_client/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   
   socket_io_client: ^2.0.3+1
+  data_table_2: ^2.5.12
 
 
   # The following adds the Cupertino Icons font to your application.
